--- a/workspace/pete.Rmd
+++ b/workspace/pete.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(warning=FALSE)
 
 --------
 
-Check out NASA's sunspot live feed [here.](https://soho.nascom.nasa.gov/sunspots/) 
+Check out NASA's sunspot live feed [here.](https://soho.nascom.nasa.gov/sunspots/) And the solar cycle progression from the [Space Weather Prediction Center.](https://www.swpc.noaa.gov/products/solar-cycle-progression)
 
 --------
 
@@ -34,7 +34,11 @@ It's crucial for scientists to model sunspot behavior as solar activity can have
 
 ### Literature
 
-It's evident that a robust understanding of space weather is of extreme importance given our world's increasing reliance on modern technologies. Moreover, space is a fascinating topic. That said, there is no shortage of scientific research on applying different statistical modeling techniques to this particular data set. Sunspots and related solar activities have been studies using various techniques including, multifractal analysis, correlation analysis, wavelet transforms, deep neural networks, autoregression, and much more [@hu].
+It's evident that a robust understanding of space weather is of extreme importance given our world's increasing reliance on modern technologies. Moreover, space is a fascinating topic. That said, there is no shortage of scientific research on applying different statistical modeling techniques to this particular data set. Sunspots and related solar activities have been studied using various techniques including, multifractal analysis, correlation analysis, wavelet transforms, deep neural networks, autoregression, and much more [@hu]. 
+
+Despite the varying modeling techniques, there is one phenomenon that all researchers agree on - the sun exhibits an approximate 11 year solar cycle. The solar cycle is indicated by the frequency and intensity of visible sunspots, and have proven to be quite difficult to predict [@daisy].
+
+
 
 ```{r load_packages, echo=FALSE}
 library(dplyr)
@@ -48,7 +52,7 @@ library(forecast)
 
 ## Data
 
-Our data includes 3300 (as of February 15, 2024) observations of monthly mean relative sunspot numbers (count) from 1749 to present. Collected at Swiss Federal Observatory, Zurich until 1960, then Tokyo Astronomical Observatory. A description of the columns provided by Solar Influences Data Analysis Center is given: 
+Our data includes 3300 (as of February 15, 2024) observations of monthly mean relative sunspot numbers (count) from 1749 to present. The data was collected at Swiss Federal Observatory, Zurich until 1960, then Tokyo Astronomical Observatory. A description of the data set provided by Solar Influences Data Analysis Center is given below: 
 
 - Column 1-2: Gregorian Calender Date
 - Column 3: Date in fraction of year for the middle of the corresponding month
