--- a/workspace/pete.bib
+++ b/workspace/pete.bib
@@ -14,24 +14,24 @@
     author    = "",
     title     = "",
     publisher = "",
-    ?_volume   = "",
-    ?_number   = "",
-    ?_series   = "",
-    ?_address  = "",
-    ?_edition  = "",
+    volume   = "",
+    number   = "",
+    series   = "",
+    address  = "",
+    edition  = "",
     year      = "XXXX",
-    ?_month    = "",
-    ?_note     = "",
+    month    = "",
+    note     = "",
 }
 
 @misc{SWPC,
     author = {},
     title = {Sunspots/Solar Cycle},
-    howpublished = {https://www.swpc.noaa.gov/phenomena/sunspotssolar-cycle} (2005/06/12)}
+    howpublished = {https://www.swpc.noaa.gov/phenomena/sunspotssolar-cycle}
 }
 
 @misc{daisy,
     author = {Daisy Dobrijevic},
     title = {Solar cycle: What is it and why does it matter?},
-    howpublished = {https://www.space.com/solar-cycle-frequency-prediction-facts} (2022/04/25)}
+    howpublished = {https://www.space.com/solar-cycle-frequency-prediction-facts} 
 }
